...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aucune réunion trouvée"
            android:textAlignment="center"
            android:textSize="24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/My_recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/My_recyclerView" />

        <com.google.android.material.appbar.AppBarLayout
...
