<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.openclassrooms.mareu.ui.MainActivity">
    <item
        android:id="@+id/filterButton"
        android:icon="@drawable/ic_filter_list_24dp"
        android:orderInCategory="100"
        android:title="Filters"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/filter_by_room"
                android:title="Filtre par salle"/>
            <item android:id="@+id/filter_by_date"
                android:title="filtre par date"/>
            <item android:id="@+id/filter_reset"
                android:title="Reset Filtre"/>


        </menu>
    </item>

</menu>
